--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -8,7 +8,7 @@
         </mat-form-field>
         
         <div class="button-wrapper">
-            <button mat-raised-button (click)="this.dialog.close()">Cancel</button>
+            <button mat-raised-button (click)="this.dialog.close()" type="button">Cancel</button>
             <button mat-raised-button color="primary" type="submit">Search</button>
         </div>
     </form>
