--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -26,7 +26,7 @@
         <mat-menu #menu="matMenu">
           <mat-option (click)="select('none')">All</mat-option>
           <mat-option *ngFor="let user of userList" (click)="select(user.first_name+' '+user.last_name)">
-            {{user.first_name}} {{user.last_name}}
+            {{user.full_name}}
           </mat-option>
         </mat-menu>
 
